# clicopy

./: README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: Button.tsx  Card.tsx  CardList.tsx  CloseButton.tsx  FooterTag.tsx  Input.tsx  InputLabel.tsx  Modal.tsx  NewEntryButton.tsx  NewEntryText.tsx  Search.tsx  StatusCard.tsx  Tag.tsx
src/components/modals/: DeleteConfirm.tsx  NewEntry.tsx  ViewEntry.tsx
src/constants/: ModalInfoTable.tsx
src/containers/: Fragment.tsx  MainLayout.tsx  ModalManager.tsx
src/helpers/: db.ts  search.ts
src/hooks/: useClickOut.tsx
src/stores/: entryManager.tsx  modalManager.tsx  tagManager.tsx  typeManager.tsx
src/utils/: search.ts
